<resources>
    <string name="app_name">App-CalculodeSalario</string>
    <string name="button_calc">Calcular</string>
    <string name="button_limpar">Novo Calculo</string>
    <string name="sal_bruto">Salario Bruto</string>
    <string name="num_depend">Numero dependentes</string>
    <string name="plano_saude">Plano de Saúde</string>

    <string-array name="tipos_plano">
        <item>Standard</item>
        <item>Básico</item>
        <item>Super</item>
        <item>Master</item>
    </string-array>

    <string name="va">VA</string>
    <string name="vt">VT</string>
    <string name="vr">VR</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>

    <string name="valida">Campo Vazio</string>

    <string name="resultado">Resultados</string>
    <string name="sb_result">Salário Bruto: %1$5.2f</string>
    <string name="plano_result">Plano de Saude: %1$5.2f</string>
    <string name="inss_result">Inss: %1$5.2f </string>
    <string name="va_result">Vale Alimentação: %1$5.2f</string>
    <string name="vt_result">Vale Transporte: %1$5.2f</string>
    <string name="vr_result">Vale Refeição: %1$5.2f</string>
    <string name="irrf_result">IRFF: %1$5.2f</string>
    <string name="sl_result">Salario Liquido: %1$5.2f</string>
    <string name="desconto">Descontos Totais: %1$5.2f</string>
</resources>